# auto-mail-ui

./: README.md  package.json
.github/workflows/: main.yml
src/: configuration.css  configuration.html  configuration.js  index.html  main.js  styles.css  test.css  ui.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/config/: config.toml  credentials.toml  email_type.toml
src-tauri/email_list/: aprod_users.csv
src-tauri/mails/: guide_exposant  premier_contact  relance  signature
src-tauri/src/: Cargo.toml  backend.rs  config.rs  error.rs  mail_content.rs  mail_credentials.rs  main.rs
src-tauri/src/config/: email_type.toml
src-tauri/src/mails/: premier_contact  relance
