[package]
name = "auto-mail-forum-with-ui"
version = "0.0.1"
description = "Envoi des mails aux entreprises des formums automatiquement"
authors = ["Eliott LEBOEUF"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
	"notification-all",
	"window-close",
	"window-show",
	"window-hide",
	"window-unminimize",
	"window-maximize",
	"window-unmaximize",
	"window-minimize",
	"window-start-dragging",
	"shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = "0.11"
toml = "0.4.2"
lazy_static = "1.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
