[package]
name = "envoi_mail"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.11"
serde = { version = "1.0", features = ["derive"] }
slint = "1.5.1"
toml = "0.4.2"

[build-dependencies]
slint-build = "1.5"
